methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:10: error: not found: value c
    marquerSol(c:Color)
               ^